[package]
name = "keylogger-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
device_query = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
windows-service = "0.6.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
daemonize = "0.5"
ctrlc = "3.4"
